# portroyale-2-trade-routes-maker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ahr.py  build.spec  gui.py  pr2_config.json  pr2_map_coords.json  pyproject.toml  run.py
.github/workflows/: release.yml
branding/: app.icns
pr2_editor/: __init__.py  __main__.py  app.py  constants.py  icons.py  main_window.py  route.py  store.py  style.py
pr2_editor/widgets/: add_stop_dialog.py  goods_table.py  manage_cities_dialog.py  map_view.py  map_window.py  qty_spinbox.py  row_widgets.py
rotte/test/: fixture_rotta01.ahr
tests/: conftest.py  test_ahr_roundtrip.py  test_route_model.py  test_store_setters.py
tools/: calibrate_map.py  cpr_extract.py  extract_changelog.py  make_icon.py
