[project]
name = "portroyale-2-trade-routes-maker"
version = "0.6.0"
description = "Desktop editor for trade routes (.ahr) of Port Royale 2 - Empire & Pirates"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
pr2-editor = "pr2_editor.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
