[project]
name = "portroyale-2-trade-routes-maker"
version = "0.6.2"
description = "Desktop editor for the .ahr trade-route files of Port Royale 2 - Empire & Pirates."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "palumbamboo", email = "danielepalu94@gmail.com" },
]
keywords = [
    "port-royale",
    "port-royale-2",
    "trade-routes",
    "ahr",
    "game",
    "modding",
    "editor",
    "pyside6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "pyside6>=6.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
build = [
    "pyinstaller>=6",
]

[project.urls]
Homepage = "https://github.com/palumbamboo/portroyale-2-trade-routes-maker"
Repository = "https://github.com/palumbamboo/portroyale-2-trade-routes-maker"
Issues = "https://github.com/palumbamboo/portroyale-2-trade-routes-maker/issues"

[project.scripts]
pr2-editor = "pr2_editor.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
