[project]
name = "portroyale-2-trade-routes-maker"
version = "0.6.4"
description = "Desktop editor for the .ahr trade-route files of Port Royale 2 - Empire & Pirates."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "palumbamboo", email = "danielepalu94@gmail.com" },
]
keywords = [
    "port-royale",
    "port-royale-2",
    "trade-routes",
    "ahr",
    "game",
    "modding",
    "editor",
    "pyside6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "pyside6>=6.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
build = [
    "pyinstaller>=6",
]

[project.urls]
Homepage = "https://github.com/palumbamboo/portroyale-2-trade-routes-maker"
Repository = "https://github.com/palumbamboo/portroyale-2-trade-routes-maker"
Issues = "https://github.com/palumbamboo/portroyale-2-trade-routes-maker/issues"

[project.scripts]
pr2-editor = "pr2_editor.app:main"

[tool.setuptools]
# The repo is a flat layout with non-package data folders (icons/, rotte/) at
# the top level, so setuptools auto-discovery can't guess what to ship.
# Declare it explicitly: the pr2_editor package plus the standalone ahr module
# (imported as `import ahr` by pr2_editor.route and used as the CLI).
py-modules = ["ahr"]

[tool.setuptools.packages.find]
include = ["pr2_editor", "pr2_editor.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
